# portfolio-web

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  test.cjs  test.css  tsconfig.json  vite.config.js
src/: App.svelte  main.css.map  main.rs  main.scss
src/common_js/: divDrag.ts
src/svelte/: Box.svelte
static/css/: main.css  main.css.map
unuse/: __index.html
